--- a/terraform/gcp/firewall/config.yaml
+++ b/terraform/gcp/firewall/config.yaml
@@ -1,10 +1,10 @@
 region: "asia-northeast1"
-project_id: "cloudsvcsandbox"
+project_id: "ageless-runway-410901"
 bucket_name: "iac_gcp_terraform_state"
 firewall_rules:
   - name: allow-ingress
     network: "custom"
     allow:
       - protocol: tcp
-        ports: [ "22", "8022", "80", "443" ]
-    source_ranges: [ "0.0.0.0/0" ]
+        ports: ["22", "8022", "80", "443"]
+    source_ranges: ["0.0.0.0/0"]
