--- a/terraform/gcp/gcs/config.yaml
+++ b/terraform/gcp/gcs/config.yaml
@@ -1,3 +1,3 @@
-project_id: "cloudsvcsandbox"
+project_id: "ageless-runway-410901"
 region: "asia-northeast1"
 bucket_name: "iac_gcp_terraform_state"
