--- a/terraform/gcp/vhost/config.yaml
+++ b/terraform/gcp/vhost/config.yaml
@@ -1,39 +1,18 @@
 region: "asia-northeast1"
-project_id: "cloudsvcsandbox"
+project_id: "ageless-runway-410901"
 bucket_name: "iac_gcp_terraform_state"
 instances:
-  - name: "devops"
+  - name: "server"
     type: "e2-standard-4"
     zone: "asia-northeast1-a"
     image: "ubuntu-2004-lts"
     disk_size_gb: 100
     network: "custom"
     subnetwork: internet-subnet
-  - name: "monitor"
-    type: "e2-standard-4"
-    zone: "asia-northeast1-a"
-    image: "ubuntu-2004-lts"
-    disk_size_gb: 100
-    network: "custom"
-    subnetwork: internet-subnet
-  - name: "sit"
+  - name: "app"
     image: "ubuntu-2004-lts"
     disk_size_gb: 100
     type: "e2-standard-2"
     zone: "asia-northeast1-a"
-    network: "custom"
-    subnetwork: internet-subnet
-  - name: "uat"
-    type: "e2-standard-4"
-    zone: "asia-northeast1-a"
-    image: "ubuntu-2004-lts"
-    disk_size_gb: 100
-    network: "custom"
-    subnetwork: internet-subnet
-  - name: "prod"
-    type: "e2-standard-4"
-    zone: "asia-northeast1-a"
-    image: "ubuntu-2004-lts"
-    disk_size_gb: 100
     network: "custom"
     subnetwork: internet-subnet
